--- a/.github/workflows/semantic.yml
+++ b/.github/workflows/semantic.yml
@@ -2,37 +2,34 @@ name: semantic-release
 
 on:
   push:
-    branches: [mainIgnore]
+    branches: [main]
 
 jobs:
   semantic:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+      NUGET_TOKEN: ${{secrets.NUGET_TOKEN}}
       HUSKY: 0
       CI: true
     steps:
-      - uses: actions/checkout@main
-        with:
-          token: ${{ secrets.GH_TOKEN }}
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "10.x"
-      - run: printf "//`node -p \"require('url').parse('https://registry.npmjs.org').host\"`/:_authToken=${NPM_TOKEN}\n" >> ~/.npmrc
-      - run: npm ci
-      - run: npm run build --if-present
-      - name: Redis Server in GitHub Actions
-        uses: supercharge/redis-github-action@1.1.0
-      - run: npm test
+      - uses: actions/checkout@v2
+      # Install the .NET SDK indicated in the global.json file
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+
+      - name: Install dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build
+      - run: dotnet test
       - uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
-      - run: previousVersion=$(sed 's/.*"version"&#58; "\(.*\)".*/\1/;t;d' ./package.json)
-      - run: npm i -g @semantic-release/changelog @semantic-release/commit-analyzer @semantic-release/git @semantic-release/github @semantic-release/exec @droidsolutions-oss/semantic-release-nuget @semantic-release/release-notes-generator semantic-release
+      - run: npm i -g @semantic-release/changelog @semantic-release/commit-analyzer @semantic-release/git @semantic-release/github @semantic-release/exec @droidsolutions-oss/semantic-release-nuget @semantic-release/release-notes-generator semantic-release @semantic-release/error
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+          NUGET_TOKEN: ${{secrets.NUGET_TOKEN}}
           HUSKY: 0
           CI: true
       - run: npx semantic-release --ci
