--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,10 @@
 # This is a basic workflow to help you get started with Actions
 
-name: build
+name: test
 on:
   pull_request:
+    branches: [main]
+  push:
     branches: [main]
 
 jobs:
