fix: adding simple README
BREAKING CHANGE: fixing nuget version

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,5 +12,16 @@
   ],
   "preset": "angular",
   "npmPublish": false,
-  "projectPath": "DictionaryChain/Codibre.DictionaryChain.csproj"
+  "projectPath": "DictionaryChain/Codibre.DictionaryChain.csproj",
+  "files": [
+    {
+      "type": "xml",
+      "replacements": [
+        {
+          "key": "VersionPrefix",
+          "value": "${nextRelease.version}"
+        }
+      ]
+    }
+  ]
 }
