--- a/.releaserc.json
+++ b/.releaserc.json
@@ -13,6 +13,7 @@
   "preset": "angular",
   "npmPublish": false,
   "projectPath": "DictionaryChain/Codibre.DictionaryChain.csproj",
+  "usePackageVersion": true,
   "files": [
     {
       "type": "xml",
