--- a/DictionaryChain/Codibre.DictionaryChain.csproj
+++ b/DictionaryChain/Codibre.DictionaryChain.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageTags>Dictionary;Tree;Chain;constantTime</PackageTags>
+	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\"/>
