--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -4,16 +4,17 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
+    <RepositoryUrl>https://github.com/codibre/dotnet-dictionary-chain</RepositoryUrl> 
+    <RepositoryType>git</RepositoryType> 
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="6.12.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
-    <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
-    <PackageReference Include="coverlet.collector" Version="3.1.2" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" developmentDependency="true" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" developmentDependency="true" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" developmentDependency="true" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.10" developmentDependency="true" />
+    <PackageReference Include="coverlet.collector" Version="3.1.2" developmentDependency="true" />
   </ItemGroup>
 
   <ItemGroup>
