--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -4,11 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <IsPackable>true</IsPackable>
-    <RepositoryUrl>https://github.com/codibre/dotnet-dictionary-chain.git</RepositoryUrl> 
-    <RepositoryType>git</RepositoryType>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <PrivateRepositoryUrl>https://github.com/codibre/dotnet-dictionary-chain</PrivateRepositoryUrl>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
